@@ -1,3 +1,9 @@
+2009-01-07  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: More checking DW_AT_sibling correctness.
+	- Rewrite abbrev_table_load logic for detecting sequences of
+	zeroes inside abbreviation section.
+
 2009-01-06  Petr Machata  <pmachata@redhat.com>
 
 	* dwarflint.c: Checking DW_AT_sibling correctness.
